Use JDK 17 to build, but keep Java 1.8 source/target compat.